k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: print-service-deployment
  labels:
    app: print-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: print-service
  template:
    metadata:
      labels:
        app: print-service
    spec:
      containers:
      - name: print-service
        image: print-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
        volumeMounts:
        - mountPath: /usr/src/app
          name: app-src
      volumes:
      - name: app-src
        hostPath:
          # directory location on host
          path: /Users/chufyrev/Documents/taxi21/print-service
          # this field is optional
          type: Directory
