k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: print-service-cluster-ip
spec:
  ports:
  - port: 4000
  selector:
    app: print-service
  type: ClusterIP
